exports[`no-misused-context-hook > invalid(1): import test from 'node:test';\ntest('p', t => { t.beforeEach(() => {}); items.map(() => {}, function () { t.test('a', () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('p', t => { t.beforeEach(() => {}); items.map(() => {}, function () { t.test('a', () => {}); }); });

`;

exports[`no-misused-context-hook > invalid(1): import test from 'node:test';\ntest('p', t => { t.beforeEach(() => {}); items.map(() => {}, function () { t.test('a', () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('p', t => { t.beforeEach(() => {}); items.map(() => {}, function () { t.test('a', () => {}); }); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(10): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, () => {}); });

`;

exports[`no-misused-context-hook > invalid(10): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(11): import test from 'node:test';\ntest('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: 'not ready'}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: 'not ready'}, () => {}); });

`;

exports[`no-misused-context-hook > invalid(11): import test from 'node:test';\ntest('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: 'not ready'}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: 'not ready'}, () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(12): import test from 'node:test';\nconst shouldSkip = true;\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: shouldSkip}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | const shouldSkip = true;
  3 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: shouldSkip}, () => {}); });

`;

exports[`no-misused-context-hook > invalid(12): import test from 'node:test';\nconst shouldSkip = true;\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: shouldSkip}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | const shouldSkip = true;
> 3 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: shouldSkip}, () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(13): import test from 'node:test';\ntest('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: false, skip: true}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: false, skip: true}, () => {}); });

`;

exports[`no-misused-context-hook > invalid(13): import test from 'node:test';\ntest('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: false, skip: true}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.afterEach(() => {}); await t.test('child', {skip: false, skip: true}, () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(14): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.skip('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.skip('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(14): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.skip('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.skip('child', () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(15): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.only.skip('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.only.skip('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(15): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.only.skip('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.only.skip('child', () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(16): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.skip.todo('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.skip.todo('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(16): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.skip.todo('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.skip.todo('child', () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(17): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.todo.skip('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.todo.skip('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(17): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.todo.skip('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.todo.skip('child', () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(18): import test from 'node:test';\ntest('parent', t => { t.beforeEach(() => {}); test.skip('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', t => { t.beforeEach(() => {}); test.skip('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(18): import test from 'node:test';\ntest('parent', t => { t.beforeEach(() => {}); test.skip('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', t => { t.beforeEach(() => {}); test.skip('child', () => {}); });
    |                       ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(19): import test from 'node:test';\ntest('parent', t => { t.afterEach(() => {}); test('child', {skip: true}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', t => { t.afterEach(() => {}); test('child', {skip: true}, () => {}); });

`;

exports[`no-misused-context-hook > invalid(19): import test from 'node:test';\ntest('parent', t => { t.afterEach(() => {}); test('child', {skip: true}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', t => { t.afterEach(() => {}); test('child', {skip: true}, () => {}); });
    |                       ^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(2): import test from 'node:test';\ntest('p', t => { t.beforeEach(() => {}); items.filter(() => true, function () { t.test('a', () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('p', t => { t.beforeEach(() => {}); items.filter(() => true, function () { t.test('a', () => {}); }); });

`;

exports[`no-misused-context-hook > invalid(2): import test from 'node:test';\ntest('p', t => { t.beforeEach(() => {}); items.filter(() => true, function () { t.test('a', () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('p', t => { t.beforeEach(() => {}); items.filter(() => true, function () { t.test('a', () => {}); }); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(20): import test from 'node:test';\ntest('parent', t => { t.beforeEach(() => {}); test('child', {skip: true, todo: true}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', t => { t.beforeEach(() => {}); test('child', {skip: true, todo: true}, () => {}); });

`;

exports[`no-misused-context-hook > invalid(20): import test from 'node:test';\ntest('parent', t => { t.beforeEach(() => {}); test('child', {skip: true, todo: true}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', t => { t.beforeEach(() => {}); test('child', {skip: true, todo: true}, () => {}); });
    |                       ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(21): import test from 'node:test';\ntest('parent', async t => { await t.test('child', child => { child.afterEach(() => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { await t.test('child', child => { child.afterEach(() => {}); }); });

`;

exports[`no-misused-context-hook > invalid(21): import test from 'node:test';\ntest('parent', async t => { await t.test('child', child => { child.afterEach(() => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { await t.test('child', child => { child.afterEach(() => {}); }); });
    |                                                              ^^^^^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(22): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', t => { t.beforeEach(() => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', t => { t.beforeEach(() => {}); }); });

`;

exports[`no-misused-context-hook > invalid(22): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', t => { t.beforeEach(() => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', t => { t.beforeEach(() => {}); }); });
    |                                                                                  ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(23): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => { t.test('child', () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { t.beforeEach(() => { t.test('child', () => {}); }); });

`;

exports[`no-misused-context-hook > invalid(23): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => { t.test('child', () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t.beforeEach(() => { t.test('child', () => {}); }); });
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(24): import test from 'node:test';\ntest('leaf', t => { t.afterEach(() => { t.test('child', () => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { t.afterEach(() => { t.test('child', () => {}); }); });

`;

exports[`no-misused-context-hook > invalid(24): import test from 'node:test';\ntest('leaf', t => { t.afterEach(() => { t.test('child', () => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t.afterEach(() => { t.test('child', () => {}); }); });
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(25): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => { t.test('child', child => { child.afterEach(() => {}); }); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { t.beforeEach(() => { t.test('child', child => { child.afterEach(() => {}); }); }); });

`;

exports[`no-misused-context-hook > invalid(25): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => { t.test('child', child => { child.afterEach(() => {}); }); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t.beforeEach(() => { t.test('child', child => { child.afterEach(() => {}); }); }); });
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(26): import test from 'node:test';\ntest('leaf', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, child => { child.afterEach(() => {}); }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, child => { child.afterEach(() => {}); }); });

`;

exports[`no-misused-context-hook > invalid(26): import test from 'node:test';\ntest('leaf', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, child => { child.afterEach(() => {}); }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true}, child => { child.afterEach(() => {}); }); });
    |                           ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(27): import test from 'node:test';\ntest('leaf', t => { (t as object).afterEach(() => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { (t as object).afterEach(() => {}); });

`;

exports[`no-misused-context-hook > invalid(27): import test from 'node:test';\ntest('leaf', t => { (t as object).afterEach(() => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { (t as object).afterEach(() => {}); });
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(28): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true as boolean}, () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true as boolean}, () => {}); });

`;

exports[`no-misused-context-hook > invalid(28): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true as boolean}, () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test('child', {skip: true as boolean}, () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(29): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().beforeEach(() => {});\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
  3 | 	getTestContext().beforeEach(() => {});
  4 | });

`;

exports[`no-misused-context-hook > invalid(29): import {test, getTestContext} from 'node:test';\ntest('a', () => {\n\tgetTestContext().beforeEach(() => {});\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', () => {
> 3 | 	getTestContext().beforeEach(() => {});
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.
  4 | });

`;

exports[`no-misused-context-hook > invalid(3): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); items.map(item => { function inner() { return t.test(item, () => {}); } }); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); items.map(item => { function inner() { return t.test(item, () => {}); } }); });

`;

exports[`no-misused-context-hook > invalid(3): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); items.map(item => { function inner() { return t.test(item, () => {}); } }); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); items.map(item => { function inner() { return t.test(item, () => {}); } }); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(30): import {test, getTestContext} from 'node:test';\ntest('a', async () => {\n\tgetTestContext().beforeEach(() => {});\n\tawait getTestContext().test('c', {skip: true}, () => {});\n}); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', async () => {
  3 | 	getTestContext().beforeEach(() => {});
  4 | 	await getTestContext().test('c', {skip: true}, () => {});
  5 | });

`;

exports[`no-misused-context-hook > invalid(30): import {test, getTestContext} from 'node:test';\ntest('a', async () => {\n\tgetTestContext().beforeEach(() => {});\n\tawait getTestContext().test('c', {skip: true}, () => {});\n}); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', async () => {
> 3 | 	getTestContext().beforeEach(() => {});
    | 	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.
  4 | 	await getTestContext().test('c', {skip: true}, () => {});
  5 | });

`;

exports[`no-misused-context-hook > invalid(31): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.todo('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.todo('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(31): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.todo('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.todo('child', () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(32): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.only('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.only('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(32): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.only('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.only('child', () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(33): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.only.todo('child', () => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.only.todo('child', () => {}); });

`;

exports[`no-misused-context-hook > invalid(33): import test from 'node:test';\ntest('parent', async t => { t.beforeEach(() => {}); await t.test.only.todo('child', () => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('parent', async t => { t.beforeEach(() => {}); await t.test.only.todo('child', () => {}); });
    |                             ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(4): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { t.beforeEach(() => {}); });

`;

exports[`no-misused-context-hook > invalid(4): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t.beforeEach(() => {}); });
    |                     ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(5): import test from 'node:test';\ntest('leaf', t => { t.afterEach(() => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { t.afterEach(() => {}); });

`;

exports[`no-misused-context-hook > invalid(5): import test from 'node:test';\ntest('leaf', t => { t.afterEach(() => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t.afterEach(() => {}); });
    |                     ^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(6): import test from 'node:test';\ntest.expectFailure('leaf', t => { t.beforeEach(() => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test.expectFailure('leaf', t => { t.beforeEach(() => {}); });

`;

exports[`no-misused-context-hook > invalid(6): import test from 'node:test';\ntest.expectFailure('leaf', t => { t.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.expectFailure('leaf', t => { t.beforeEach(() => {}); });
    |                                   ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(7): import test from 'node:test';\ntest('leaf', t => { t?.beforeEach(() => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { t?.beforeEach(() => {}); });

`;

exports[`no-misused-context-hook > invalid(7): import test from 'node:test';\ntest('leaf', t => { t?.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t?.beforeEach(() => {}); });
    |                     ^^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(8): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => {}); t.afterEach(() => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', t => { t.beforeEach(() => {}); t.afterEach(() => {}); });

`;

exports[`no-misused-context-hook > invalid(8): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => {}); t.afterEach(() => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t.beforeEach(() => {}); t.afterEach(() => {}); });
    |                     ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(8): import test from 'node:test';\ntest('leaf', t => { t.beforeEach(() => {}); t.afterEach(() => {}); }); 3`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', t => { t.beforeEach(() => {}); t.afterEach(() => {}); });
    |                                             ^^^^^^^^^^^^^^^^^^^^^ \`afterEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;

exports[`no-misused-context-hook > invalid(9): import test from 'node:test';\ntest('leaf', (t = undefined) => { t.beforeEach(() => {}); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('leaf', (t = undefined) => { t.beforeEach(() => {}); });

`;

exports[`no-misused-context-hook > invalid(9): import test from 'node:test';\ntest('leaf', (t = undefined) => { t.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('leaf', (t = undefined) => { t.beforeEach(() => {}); });
    |                                   ^^^^^^^^^^^^^^^^^^^^^^ \`beforeEach()\` has no effect on a test without runnable subtests. It only runs around the test's subtests.

`;
